--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "s03-parcours-oblog-julie-onigiri",
+  "name": "revision-_oblog_20-03",
   "version": "1.0.0",
-  "description": "![Aperçu](integration/apercu.png \"Aperçu\")",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
